Fix deprecated code (#22)